crates/taudit-cli/tests/snapshots/snapshot_gitlab__gitlab_creds_all_findings.snap
---
source: crates/taudit-cli/tests/snapshot_gitlab.rs
expression: findings
---
- severity: critical
  category: authority_propagation
  path:
    source: 1
    sink: 4
    edges:
      - 4
    crossed_boundary: true
    boundary_crossing:
      - first_party
      - untrusted
  nodes_involved:
    - 1
    - 4
  message: "API_SECRET_KEY propagated to alpine:latest across trust boundary"
  recommendation:
    type: tsafe_remediation
    command: tsafe exec --ns <scoped-namespace> -- <command>
    explanation: "Scope API_SECRET_KEY to only the step that needs it — bind it via the step's `env:` block or a scoped secret runtime instead of exposing it to every downstream step."
  source: built-in
  confidence_scope: yaml_only
  authority_kinds:
    - credential_named_variable
- severity: critical
  category: authority_propagation
  path:
    source: 0
    sink: 4
    edges:
      - 4
    crossed_boundary: true
    boundary_crossing:
      - first_party
      - untrusted
  nodes_involved:
    - 0
    - 4
  message: "CI_JOB_TOKEN propagated to alpine:latest across trust boundary"
  recommendation:
    type: manual
    action: "Narrow the provider-native scope of CI_JOB_TOKEN so it no longer reaches the flagged sink: restrict the job token's reach via the CI/CD job token allowlist (Settings > CI/CD > Job token permissions) and pin any untrusted sink image or include to a digest. CI_JOB_TOKEN is an ephemeral platform token, so an external secret runtime cannot scope it."
  source: built-in
  confidence_scope: yaml_only
  authority_kinds:
    - job_token
- severity: critical
  category: authority_propagation
  path:
    source: 2
    sink: 4
    edges:
      - 4
    crossed_boundary: true
    boundary_crossing:
      - first_party
      - untrusted
  nodes_involved:
    - 2
    - 4
  message: "DATABASE_PASSWORD propagated to alpine:latest across trust boundary"
  recommendation:
    type: tsafe_remediation
    command: tsafe exec --ns <scoped-namespace> -- <command>
    explanation: "Scope DATABASE_PASSWORD to only the step that needs it — bind it via the step's `env:` block or a scoped secret runtime instead of exposing it to every downstream step."
  source: built-in
  confidence_scope: yaml_only
  authority_kinds:
    - credential_named_variable
- severity: critical
  category: authority_propagation
  path:
    source: 3
    sink: 4
    edges:
      - 4
    crossed_boundary: true
    boundary_crossing:
      - first_party
      - untrusted
  nodes_involved:
    - 3
    - 4
  message: "DEPLOY_TOKEN propagated to alpine:latest across trust boundary"
  recommendation:
    type: tsafe_remediation
    command: tsafe exec --ns <scoped-namespace> -- <command>
    explanation: "Scope DEPLOY_TOKEN to only the step that needs it — bind it via the step's `env:` block or a scoped secret runtime instead of exposing it to every downstream step."
  source: built-in
  confidence_scope: yaml_only
  authority_kinds:
    - credential_named_variable
- severity: low
  category: long_lived_credential
  nodes_involved:
    - 1
  message: "'API_SECRET_KEY' looks like a long-lived static credential"
  recommendation:
    type: federate_identity
    static_secret: API_SECRET_KEY
    oidc_provider: "GitHub Actions OIDC (id-token: write)"
  source: built-in
  time_to_fix: large
  confidence_scope: yaml_only
  authority_kinds:
    - credential_named_variable
- severity: low
  category: long_lived_credential
  nodes_involved:
    - 2
  message: "'DATABASE_PASSWORD' looks like a long-lived static credential"
  recommendation:
    type: federate_identity
    static_secret: DATABASE_PASSWORD
    oidc_provider: "GitHub Actions OIDC (id-token: write)"
  source: built-in
  time_to_fix: large
  confidence_scope: yaml_only
  authority_kinds:
    - credential_named_variable
- severity: high
  category: over_privileged_identity
  nodes_involved:
    - 0
    - 5
  message: "CI_JOB_TOKEN has broad scope (permissions: '') — likely broader than needed"
  recommendation:
    type: reduce_permissions
    current: ""
    minimum: "{ contents: read }"
  source: built-in
  time_to_fix: small
  confidence_scope: yaml_only
  authority_kinds:
    - job_token
- severity: high
  category: unpinned_action
  nodes_involved:
    - 4
  message: "alpine:latest is not pinned to a SHA digest"
  recommendation:
    type: pin_action
    current: "alpine:latest"
    pinned: "alpine:latest@<sha256-digest>"
  source: built-in
  time_to_fix: trivial
  confidence_scope: yaml_only
  runtime_preconditions:
    - "the referenced mutable branch, tag, include, or image can change independently of this repository"
  attacker_surface_kinds:
    - mutable_dependency_ref
