crates/taudit-cli/tests/snapshots/snapshot_gitlab__gitlab_creds_finding_1.snap
---
source: crates/taudit-cli/tests/snapshot_gitlab.rs
expression: finding
---
severity: critical
category: authority_propagation
path:
  source: 0
  sink: 4
  edges:
    - 4
  crossed_boundary: true
  boundary_crossing:
    - first_party
    - untrusted
nodes_involved:
  - 0
  - 4
message: "CI_JOB_TOKEN propagated to alpine:latest across trust boundary"
recommendation:
  type: manual
  action: "Narrow the provider-native scope of CI_JOB_TOKEN so it no longer reaches the flagged sink: restrict the job token's reach via the CI/CD job token allowlist (Settings > CI/CD > Job token permissions) and pin any untrusted sink image or include to a digest. CI_JOB_TOKEN is an ephemeral platform token, so an external secret runtime cannot scope it."
source: built-in
confidence_scope: yaml_only
authority_kinds:
  - job_token
