crates/taudit-cli/tests/snapshots/snapshot_gitlab__gitlab_creds_finding_2.snap
---
source: crates/taudit-cli/tests/snapshot_gitlab.rs
expression: finding
---
severity: critical
category: authority_propagation
path:
  source: 2
  sink: 4
  edges:
    - 4
  crossed_boundary: true
  boundary_crossing:
    - first_party
    - untrusted
nodes_involved:
  - 2
  - 4
message: "DATABASE_PASSWORD propagated to alpine:latest across trust boundary"
recommendation:
  type: tsafe_remediation
  command: tsafe exec --ns <scoped-namespace> -- <command>
  explanation: "Scope DATABASE_PASSWORD to only the step that needs it — bind it via the step's `env:` block or a scoped secret runtime instead of exposing it to every downstream step."
source: built-in
confidence_scope: yaml_only
authority_kinds:
  - credential_named_variable
