crates/taudit-cli/tests/snapshots/snapshot_gitlab__gitlab_creds_finding_5.snap
---
source: crates/taudit-cli/tests/snapshot_gitlab.rs
assertion_line: 38
expression: finding
---
severity: low
category: long_lived_credential
nodes_involved:
  - 2
message: "'DATABASE_PASSWORD' looks like a long-lived static credential"
recommendation:
  type: federate_identity
  static_secret: DATABASE_PASSWORD
  oidc_provider: "GitHub Actions OIDC (id-token: write)"
source: built-in
time_to_fix: large
