crates/taudit-cli/tests/snapshots/snapshot_gitlab__gitlab_creds_finding_6.snap
---
source: crates/taudit-cli/tests/snapshot_gitlab.rs
expression: finding
---
severity: high
category: over_privileged_identity
nodes_involved:
  - 0
  - 5
message: "CI_JOB_TOKEN has broad scope (permissions: '') — likely broader than needed"
recommendation:
  type: reduce_permissions
  current: ""
  minimum: "{ contents: read }"
source: built-in
time_to_fix: small
