crates/taudit-cli/tests/snapshots/snapshot_gitlab__gitlab_creds_finding_7.snap
---
source: crates/taudit-cli/tests/snapshot_gitlab.rs
expression: finding
---
severity: high
category: unpinned_action
nodes_involved:
  - 4
message: "alpine:latest is not pinned to a SHA digest"
recommendation:
  type: pin_action
  current: "alpine:latest"
  pinned: "alpine:latest@<sha256-digest>"
source: built-in
time_to_fix: trivial
confidence_scope: yaml_only
runtime_preconditions:
  - "the referenced mutable branch, tag, include, or image can change independently of this repository"
attacker_surface_kinds:
  - mutable_dependency_ref
