crates/taudit-cli/tests/snapshots/snapshot_gitlab__gitlab_creds_json_report.snap
---
source: crates/taudit-cli/tests/snapshot_gitlab.rs
expression: json
---
findings:
  - authority_kinds:
      - credential_named_variable
    category: authority_propagation
    confidence_scope: yaml_only
    finding_group_id: b6ff4be4-fc54-5e4f-bd34-138b76ef0f6c
    fingerprint: f0cf41ccd8eb8b9f4f7053b605ce3f47
    message: "API_SECRET_KEY propagated to alpine:latest across trust boundary"
    nodes_involved:
      - 1
      - 4
    path:
      boundary_crossing:
        - first_party
        - untrusted
      crossed_boundary: true
      edges:
        - 4
      sink: 4
      source: 1
    recommendation:
      command: tsafe exec --ns <scoped-namespace> -- <command>
      explanation: "Scope API_SECRET_KEY to only the step that needs it — bind it via the step's `env:` block or a scoped secret runtime instead of exposing it to every downstream step."
      type: tsafe_remediation
    rule_id: authority_propagation
    severity: critical
    source: built-in
    suppression_key: sk1_4d8868f47599b75e825c7f2b9905f87d
  - authority_kinds:
      - job_token
    category: authority_propagation
    confidence_scope: yaml_only
    finding_group_id: 9afae362-cbcb-5b29-8880-b1c56657fd23
    fingerprint: d1f514384289c0c3a150b864d24bb997
    message: "CI_JOB_TOKEN propagated to alpine:latest across trust boundary"
    nodes_involved:
      - 0
      - 4
    path:
      boundary_crossing:
        - first_party
        - untrusted
      crossed_boundary: true
      edges:
        - 4
      sink: 4
      source: 0
    recommendation:
      action: "Narrow the provider-native scope of CI_JOB_TOKEN so it no longer reaches the flagged sink: restrict the job token's reach via the CI/CD job token allowlist (Settings > CI/CD > Job token permissions) and pin any untrusted sink image or include to a digest. CI_JOB_TOKEN is an ephemeral platform token, so an external secret runtime cannot scope it."
      type: manual
    rule_id: authority_propagation
    severity: critical
    source: built-in
    suppression_key: sk1_57cd7e2f559ffc67b8242372ad2b83d1
  - authority_kinds:
      - credential_named_variable
    category: authority_propagation
    confidence_scope: yaml_only
    finding_group_id: a0e0ea31-24b4-50fc-82ac-3aa44ceed3f9
    fingerprint: c8d0c0741c3c4e78905b81951718ce98
    message: "DATABASE_PASSWORD propagated to alpine:latest across trust boundary"
    nodes_involved:
      - 2
      - 4
    path:
      boundary_crossing:
        - first_party
        - untrusted
      crossed_boundary: true
      edges:
        - 4
      sink: 4
      source: 2
    recommendation:
      command: tsafe exec --ns <scoped-namespace> -- <command>
      explanation: "Scope DATABASE_PASSWORD to only the step that needs it — bind it via the step's `env:` block or a scoped secret runtime instead of exposing it to every downstream step."
      type: tsafe_remediation
    rule_id: authority_propagation
    severity: critical
    source: built-in
    suppression_key: sk1_d381777f15c4efe9a00d339a8f6b1c0c
  - authority_kinds:
      - credential_named_variable
    category: authority_propagation
    confidence_scope: yaml_only
    finding_group_id: e91b2b44-fec3-5998-8470-2cfadd3a9491
    fingerprint: 5323c1317a722e0f46a15a1233871ec8
    message: "DEPLOY_TOKEN propagated to alpine:latest across trust boundary"
    nodes_involved:
      - 3
      - 4
    path:
      boundary_crossing:
        - first_party
        - untrusted
      crossed_boundary: true
      edges:
        - 4
      sink: 4
      source: 3
    recommendation:
      command: tsafe exec --ns <scoped-namespace> -- <command>
      explanation: "Scope DEPLOY_TOKEN to only the step that needs it — bind it via the step's `env:` block or a scoped secret runtime instead of exposing it to every downstream step."
      type: tsafe_remediation
    rule_id: authority_propagation
    severity: critical
    source: built-in
    suppression_key: sk1_3d07ac50f64ecfb274ba7f01046f55db
  - authority_kinds:
      - credential_named_variable
    category: long_lived_credential
    confidence_scope: yaml_only
    finding_group_id: 8fa9f6b0-b9f5-50e7-a4b6-b99e1a4007ac
    fingerprint: ae8731d1d284f409814e6f2b1d2a3d1f
    message: "'API_SECRET_KEY' looks like a long-lived static credential"
    nodes_involved:
      - 1
    recommendation:
      oidc_provider: "GitHub Actions OIDC (id-token: write)"
      static_secret: API_SECRET_KEY
      type: federate_identity
    rule_id: long_lived_credential
    severity: low
    source: built-in
    suppression_key: sk1_059c2e384986421c4fd59a5b15be12e3
    time_to_fix: large
  - authority_kinds:
      - credential_named_variable
    category: long_lived_credential
    confidence_scope: yaml_only
    finding_group_id: b3d99875-8149-504c-b266-5ae29a1ae24b
    fingerprint: c28546ec048a13ba81281e634423288e
    message: "'DATABASE_PASSWORD' looks like a long-lived static credential"
    nodes_involved:
      - 2
    recommendation:
      oidc_provider: "GitHub Actions OIDC (id-token: write)"
      static_secret: DATABASE_PASSWORD
      type: federate_identity
    rule_id: long_lived_credential
    severity: low
    source: built-in
    suppression_key: sk1_89c38b2582eb31cfba3a89dbd0cf1538
    time_to_fix: large
  - authority_kinds:
      - job_token
    category: over_privileged_identity
    confidence_scope: yaml_only
    finding_group_id: 67cdfaab-2132-55de-91a5-aed998e1d215
    fingerprint: 07093ef97866a5c453f2a170855cdd88
    message: "CI_JOB_TOKEN has broad scope (permissions: '') — likely broader than needed"
    nodes_involved:
      - 0
      - 5
    recommendation:
      current: ""
      minimum: "{ contents: read }"
      type: reduce_permissions
    rule_id: over_privileged_identity
    severity: high
    source: built-in
    suppression_key: sk1_d923ac3a51439fa1e7b0dbab0c1f67d3
    time_to_fix: small
  - attacker_surface_kinds:
      - mutable_dependency_ref
    category: unpinned_action
    confidence_scope: yaml_only
    finding_group_id: e8c9538b-c5ee-5998-a374-feb774948c44
    fingerprint: a7ed3f67da501a83e4ee5dccc89ca588
    message: "alpine:latest is not pinned to a SHA digest"
    nodes_involved:
      - 4
    recommendation:
      current: "alpine:latest"
      pinned: "alpine:latest@<sha256-digest>"
      type: pin_action
    rule_id: unpinned_action
    runtime_preconditions:
      - "the referenced mutable branch, tag, include, or image can change independently of this repository"
    severity: high
    source: built-in
    suppression_key: sk1_aedababcea5a6a84a5ce6d92ba8e5908
    time_to_fix: trivial
graph:
  completeness: complete
  edges:
    - authority_summary:
        identity_scope: broad
        trust_zone: first_party
      from: 5
      id: 0
      kind: has_access_to
      to: 0
    - from: 5
      id: 1
      kind: has_access_to
      to: 1
    - from: 5
      id: 2
      kind: has_access_to
      to: 2
    - from: 5
      id: 3
      kind: has_access_to
      to: 3
    - from: 5
      id: 4
      kind: uses_image
      to: 4
  metadata:
    platform: gitlab
  nodes:
    - id: 0
      kind: identity
      metadata:
        identity_scope: broad
        implicit: "true"
      name: CI_JOB_TOKEN
      trust_zone: first_party
    - id: 1
      kind: secret
      metadata: {}
      name: API_SECRET_KEY
      trust_zone: first_party
    - id: 2
      kind: secret
      metadata: {}
      name: DATABASE_PASSWORD
      trust_zone: first_party
    - id: 3
      kind: secret
      metadata: {}
      name: DEPLOY_TOKEN
      trust_zone: first_party
    - id: 4
      kind: image
      metadata: {}
      name: "alpine:latest"
      trust_zone: untrusted
    - id: 5
      kind: step
      metadata:
        job_name: deploy
        script_body: "echo \"Deploying with token $DEPLOY_TOKEN\""
      name: deploy
      trust_zone: first_party
  source:
    file: ".gitlab-ci.yml"
schema_uri: "https://taudit.dev/schemas/taudit-report.schema.json"
schema_version: 1.0.0
summary:
  completeness: complete
  critical: 4
  graph_risk_summary:
    authority_roots: 4
    delegation_hops: 0
    mutable_refs: 1
    protected_resource_categories:
      - identity
      - secret
    publication_adjacent_sinks: 1
    untrusted_sinks: 1
  high: 2
  info: 0
  low: 2
  medium: 0
  total_edges: 5
  total_findings: 8
  total_nodes: 6
